hphp/test/slow/using/empty-exprs.php.expectf
Fatal error: An expression is expected here. in %s/test/slow/using/empty-exprs.php on line 4